# contribution_tool

./: README.md  docker-compose.yaml  mypy.ini  pyproject.toml
components/: exceptions.py  settings.py
components/application/: get_activity_types.py  get_application_state.py  get_compensation_requests.py  get_current_user.py  uc_base.py  uc_request.py  uc_response.py
components/controller/: context.py  custom_logging.py
components/controller/fastapi/: __init__.py  _devel.py  default_headers.py  dependencies.py  error_processor.py  fastapi_error_handlers.py  main.py  middleware.py  request.py  response.py
components/controller/fastapi/routers/: __init__.py  (+1 more)
components/domain/: activity_type.py  application_status.py  compensation_request.py  enums.py  error_codes.py  project.py  skill.py  user.py
components/domain/repository_interfaces/: activity_types_interface.py  compensation_requests_interface.py  projects_interface.py  trainers_interface.py  users_interface.py
db_migrations/: README  env.py
db_migrations/versions/: 128411c0b2c8_init.py  423d879dbefa_added_test_users.py  bbf2b1957cc2_updated_compensation_request_entity.py  c2bdf99dcb8b_basic_structure.py  e08d91f9e081_added_example_locations_and_projects.py  f7bd712ed9ed_added_employment_type_to_trainer.py
docker/: README  service.dockerfile
docker/entrypoints/: entrypoint.sh  run_tests.sh
docker/files/: init_db.sh  reset_db.sh  run.sh  start-service.sh
tests/: conftest.py
tests/unit/application/: test_get_application_state.py  test_get_compensation_requests.py  test_get_current_user.py
(+25 files in other folders)
