[tool.poetry]
name = "contribution-tool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "components"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
aiofiles = "^23.1.0"
click = "^8.1.3"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"
black = "^23.3.0"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
httpx = "^0.24.1"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
types-aiofiles = "^23.1.0.1"
types-ujson = "^5.7.0.4"
mypy = "^1.2.0"
bandit = "^1.7.5"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-lenght = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
